tests-integration/fixtures/checking/092_ambiguous_constraint/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
read :: forall (a :: Type). Read (a :: Type) => String -> (a :: Type)
show :: forall (a :: Type). Show (a :: Type) => (a :: Type) -> String
test :: String -> String

Types
Read :: Type -> Constraint
Show :: Type -> Constraint

Classes
class Read (a :: Type)
class Show (a :: Type)

Diagnostics
error[AmbiguousConstraint]: Ambiguous constraint: Show ?5[:0]
  --> 11:1..11:23
   |
11 | test s = show (read s)
   | ^~~~~~~~~~~~~~~~~~~~~~
error[AmbiguousConstraint]: Ambiguous constraint: Read ?5[:0]
  --> 11:1..11:23
   |
11 | test s = show (read s)
   | ^~~~~~~~~~~~~~~~~~~~~~
